some bug fixes, improved history api